v1.0.0/modules/schema/pages/class/Measurement.adoc
= `Measurement`
:toclevels: 4


+++A Measurement represents any measured, calculated or non-measured non-calculated quantity. Any piece of equipment may contain Measurements, e.g. a substation may have temperature measurements and door open indications, a transformer may have oil temperature and tank pressure measurements, a bay may contain a number of power flow measurements and a Breaker may contain a switch status measurement. 
The PSR - Measurement association is intended to capture this use of Measurement and is included in the naming hierarchy based on EquipmentContainer. The naming hierarchy typically has Measurements as leaves, e.g. Substation-VoltageLevel-Bay-Switch-Measurement.
Some Measurements represent quantities related to a particular sensor location in the network, e.g. a voltage transformer (VT) or potential transformer (PT) at a busbar or a current transformer (CT) at the bar between a breaker and an isolator. The sensing position is not captured in the PSR - Measurement association. Instead it is captured by the Measurement - Terminal association that is used to define the sensing location in the network topology. The location is defined by the connection of the Terminal to ConductingEquipment. 
If both a Terminal and PSR are associated, and the PSR is of type ConductingEquipment, the associated Terminal should belong to that ConductingEquipment instance.
When the sensor location is needed both Measurement-PSR and Measurement-Terminal are used. The Measurement-Terminal association is never used alone.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Measurement`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Measurement`*
 *** xref::class/Accumulator.adoc[`Accumulator`]
 *** xref::class/Analog.adoc[`Analog`]
 *** xref::class/Discrete.adoc[`Discrete`]
 *** xref::class/MktMeasurement.adoc[`MktMeasurement`]
 *** xref::class/StringMeasurement.adoc[`StringMeasurement`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ACDCTerminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ProtectiveActionAdjustment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CalculationMethodHierarchy {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PinMeasurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MeasurementCalculatorInput {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeasurementAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Procedure {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Measurement -> ACDCTerminal: Terminal


Measurement -> ProtectiveActionAdjustment: ProtectiveActionAdjustment


Measurement -> CalculationMethodHierarchy: CalculationMethodHierarchy


Measurement -> PowerSystemResource: PowerSystemResource


Measurement -> PinMeasurement: PinMeasurement


Measurement -> MeasurementCalculatorInput: MeasurementCalculatorInput


Measurement -> Asset: Asset


Measurement -> MeasurementAction: MeasurementAction


Measurement -> Location: Locations


Measurement -> Procedure: Procedures


Measurement -> DiagramObject: DiagramObjects


Measurement -> InstanceSet: InstanceSet


Measurement -> Name: Names


Measurement -> ChangeSetMember: PropertiesCIMDataObject


Measurement -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Asset,`Asset`>>
| 0..1
| xref::class/Asset.adoc[`Asset`]
| +++Asset that has a measurement+++

| <<CalculationMethodHierarchy,`CalculationMethodHierarchy`>>
| 0..1
| xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`]
| +++Calculation method hierarchy which applies to this analog.+++

| <<MeasurementAction,`MeasurementAction`>>
| 0..1
| xref::class/MeasurementAction.adoc[`MeasurementAction`]
| +++The measurement action that is performed on the measurement+++

| <<PowerSystemResource,`PowerSystemResource`>>
| 0..1
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++The power system resource that contains the measurement.+++

| <<Terminal,`Terminal`>>
| 0..1
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]
| +++One or more measurements may be associated with a terminal in the network.+++

| <<measurementType,`measurementType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Specifies the type of measurement.  For example, this specifies if the measurement represents an indoor temperature, outdoor temperature, bus voltage, line flow, etc.
When the measurementType is set to "Specialization", the type of Measurement is defined in more detail by the specialized class which inherits from Measurement.+++

| <<phases,`phases`>>
| 0..1
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Indicates to which phases the measurement applies and avoids the need to use 'measurementType' to also encode phase information (which would explode the types). The phase information in Measurement, along with 'measurementType' and 'phases' uniquely defines a Measurement for a device, based on normal network phase. Their meaning will not change when the computed energizing phasing is changed due to jumpers or other reasons.
If the attribute is missing three phases (ABC) shall be assumed.+++

| <<unitMultiplier,`unitMultiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++The unit multiplier of the measured quantity.+++

| <<unitSymbol,`unitSymbol`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The unit of measure of the measured quantity.+++

| <<Locations,`Locations`>>
| 0..*
| xref::class/Location.adoc[`Location`]
| +++Location of this measurement.+++

| <<MeasurementCalculatorInput,`MeasurementCalculatorInput`>>
| 0..*
| xref::class/MeasurementCalculatorInput.adoc[`MeasurementCalculatorInput`]
| n/a

| <<PinMeasurement,`PinMeasurement`>>
| 0..*
| xref::class/PinMeasurement.adoc[`PinMeasurement`]
| n/a

| <<Procedures,`Procedures`>>
| 0..*
| xref::class/Procedure.adoc[`Procedure`]
| +++Measurements are specified in types of documents, such as procedures.+++

| <<ProtectiveActionAdjustment,`ProtectiveActionAdjustment`>>
| 0..*
| xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++Asset that has a measurement+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#CalculationMethodHierarchy]
=== `CalculationMethodHierarchy`
+++Calculation method hierarchy which applies to this analog.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.CalculationMethodHierarchy`
| Cardinality
| 0..1
| Type
| xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Locations]
=== `Locations`
+++Location of this measurement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Locations`
| Cardinality
| 0..*
| Type
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#MeasurementAction]
=== `MeasurementAction`
+++The measurement action that is performed on the measurement+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.MeasurementAction`
| Cardinality
| 0..1
| Type
| xref::class/MeasurementAction.adoc[`MeasurementAction`]


|===

//[discrete]
[#MeasurementCalculatorInput]
=== `MeasurementCalculatorInput`


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.MeasurementCalculatorInput`
| Cardinality
| 0..*
| Type
| xref::class/MeasurementCalculatorInput.adoc[`MeasurementCalculatorInput`]


|===

//[discrete]
[#measurementType]
=== `measurementType`
+++Specifies the type of measurement.  For example, this specifies if the measurement represents an indoor temperature, outdoor temperature, bus voltage, line flow, etc.
When the measurementType is set to "Specialization", the type of Measurement is defined in more detail by the specialized class which inherits from Measurement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.measurementType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#phases]
=== `phases`
+++Indicates to which phases the measurement applies and avoids the need to use 'measurementType' to also encode phase information (which would explode the types). The phase information in Measurement, along with 'measurementType' and 'phases' uniquely defines a Measurement for a device, based on normal network phase. Their meaning will not change when the computed energizing phasing is changed due to jumpers or other reasons.
If the attribute is missing three phases (ABC) shall be assumed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]


|===

//[discrete]
[#PinMeasurement]
=== `PinMeasurement`


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.PinMeasurement`
| Cardinality
| 0..*
| Type
| xref::class/PinMeasurement.adoc[`PinMeasurement`]


|===

//[discrete]
[#PowerSystemResource]
=== `PowerSystemResource`
+++The power system resource that contains the measurement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.PowerSystemResource`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Procedures]
=== `Procedures`
+++Measurements are specified in types of documents, such as procedures.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Procedures`
| Cardinality
| 0..*
| Type
| xref::class/Procedure.adoc[`Procedure`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ProtectiveActionAdjustment]
=== `ProtectiveActionAdjustment`


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.ProtectiveActionAdjustment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Terminal]
=== `Terminal`
+++One or more measurements may be associated with a terminal in the network.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

//[discrete]
[#unitMultiplier]
=== `unitMultiplier`
+++The unit multiplier of the measured quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.unitMultiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]


|===

//[discrete]
[#unitSymbol]
=== `unitSymbol`
+++The unit of measure of the measured quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.unitSymbol`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]


|===


