v1.1.0/modules/schema/pages/class/Measurement.adoc
= `Measurement`
:toclevels: 4


+++A Measurement represents any measured, calculated or non-measured non-calculated quantity. Any piece of equipment may contain Measurements, e.g. a substation may have temperature measurements and door open indications, a transformer may have oil temperature and tank pressure measurements, a bay may contain a number of power flow measurements and a Breaker may contain a switch status measurement. 
The PSR - Measurement association is intended to capture this use of Measurement and is included in the naming hierarchy based on EquipmentContainer. The naming hierarchy typically has Measurements as leaves, e.g. Substation-VoltageLevel-Bay-Switch-Measurement.
Some Measurements represent quantities related to a particular sensor location in the network, e.g. a voltage transformer (VT) or potential transformer (PT) at a busbar or a current transformer (CT) at the bar between a breaker and an isolator. The sensing position is not captured in the PSR - Measurement association. Instead it is captured by the Measurement - Terminal association that is used to define the sensing location in the network topology. The location is defined by the connection of the Terminal to ConductingEquipment. 
If both a Terminal and PSR are associated, and the PSR is of type ConductingEquipment, the associated Terminal should belong to that ConductingEquipment instance.
When the sensor location is needed both Measurement-PSR and Measurement-Terminal are used. The Measurement-Terminal association is never used alone.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Measurement`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Measurement`*
 *** xref::class/Accumulator.adoc[`Accumulator`]
 *** xref::class/Analog.adoc[`Analog`]
 *** xref::class/Discrete.adoc[`Discrete`]
 *** xref::class/MktMeasurement.adoc[`MktMeasurement`]
 *** xref::class/StringMeasurement.adoc[`StringMeasurement`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++Asset that has a measurement+++
| _n/a_

| <<CalculationMethodHierarchy,`CalculationMethodHierarchy`>>
//| [[slots_table.CalculationMethodHierarchy]]<<CalculationMethodHierarchy,`CalculationMethodHierarchy`>>
| 0..1 +
xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`]
| +++Calculation method hierarchy which applies to this analog.+++
| _n/a_

| <<Locations,`Locations`>>
//| [[slots_table.Locations]]<<Locations,`Locations`>>
| 0..* +
xref::class/Location.adoc[`Location`]
| +++Location of this measurement.+++
| _n/a_

| <<MeasurementAction,`MeasurementAction`>>
//| [[slots_table.MeasurementAction]]<<MeasurementAction,`MeasurementAction`>>
| 0..1 +
xref::class/MeasurementAction.adoc[`MeasurementAction`]
| +++The measurement action that is performed on the measurement+++
| _n/a_

| <<MeasurementCalculatorInput,`MeasurementCalculatorInput`>>
//| [[slots_table.MeasurementCalculatorInput]]<<MeasurementCalculatorInput,`MeasurementCalculatorInput`>>
| 0..* +
xref::class/MeasurementCalculatorInput.adoc[`MeasurementCalculatorInput`]
| _n/a_
| _n/a_

| <<PinMeasurement,`PinMeasurement`>>
//| [[slots_table.PinMeasurement]]<<PinMeasurement,`PinMeasurement`>>
| 0..* +
xref::class/PinMeasurement.adoc[`PinMeasurement`]
| _n/a_
| _n/a_

| <<PowerSystemResource,`PowerSystemResource`>>
//| [[slots_table.PowerSystemResource]]<<PowerSystemResource,`PowerSystemResource`>>
| 0..1 +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++The power system resource that contains the measurement.+++
| _n/a_

| <<Procedures,`Procedures`>>
//| [[slots_table.Procedures]]<<Procedures,`Procedures`>>
| 0..* +
xref::class/Procedure.adoc[`Procedure`]
| +++Measurements are specified in types of documents, such as procedures.+++
| _n/a_

| <<ProtectiveActionAdjustment,`ProtectiveActionAdjustment`>>
//| [[slots_table.ProtectiveActionAdjustment]]<<ProtectiveActionAdjustment,`ProtectiveActionAdjustment`>>
| 0..* +
xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`]
| _n/a_
| _n/a_

| <<Terminal,`Terminal`>>
//| [[slots_table.Terminal]]<<Terminal,`Terminal`>>
| 0..1 +
xref::class/ACDCTerminal.adoc[`ACDCTerminal`]
| +++One or more measurements may be associated with a terminal in the network.+++
| _n/a_

| <<measurementType,`measurementType`>>
//| [[slots_table.measurementType]]<<measurementType,`measurementType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Specifies the type of measurement.  For example, this specifies if the measurement represents an indoor temperature, outdoor...+++
| _n/a_

| <<phases,`phases`>>
//| [[slots_table.phases]]<<phases,`phases`>>
| 0..1 +
xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Indicates to which phases the measurement applies and avoids the need to use 'measurementType' to also encode phase...+++
| _n/a_

| <<unitMultiplier,`unitMultiplier`>>
//| [[slots_table.unitMultiplier]]<<unitMultiplier,`unitMultiplier`>>
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++The unit multiplier of the measured quantity.+++
| _n/a_

| <<unitSymbol,`unitSymbol`>>
//| [[slots_table.unitSymbol]]<<unitSymbol,`unitSymbol`>>
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The unit of measure of the measured quantity.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++Asset that has a measurement+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#CalculationMethodHierarchy]
=== `CalculationMethodHierarchy`
+++Calculation method hierarchy which applies to this analog.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.CalculationMethodHierarchy`
| Cardinality
| 0..1
| Type
| xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`]


|===

////
[.text-left]
--
<<slots_table.CalculationMethodHierarchy,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Locations]
=== `Locations`
+++Location of this measurement.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Locations`
| Cardinality
| 0..*
| Type
| xref::class/Location.adoc[`Location`]


|===

////
[.text-left]
--
<<slots_table.Locations,&#10548;>>
--
////


//[discrete]
[#MeasurementAction]
=== `MeasurementAction`
+++The measurement action that is performed on the measurement+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.MeasurementAction`
| Cardinality
| 0..1
| Type
| xref::class/MeasurementAction.adoc[`MeasurementAction`]


|===

////
[.text-left]
--
<<slots_table.MeasurementAction,&#10548;>>
--
////


//[discrete]
[#MeasurementCalculatorInput]
=== `MeasurementCalculatorInput`



[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.MeasurementCalculatorInput`
| Cardinality
| 0..*
| Type
| xref::class/MeasurementCalculatorInput.adoc[`MeasurementCalculatorInput`]


|===

////
[.text-left]
--
<<slots_table.MeasurementCalculatorInput,&#10548;>>
--
////


//[discrete]
[#measurementType]
=== `measurementType`
+++Specifies the type of measurement.  For example, this specifies if the measurement represents an indoor temperature, outdoor temperature, bus voltage, line flow, etc.
When the measurementType is set to "Specialization", the type of Measurement is defined in more detail by the specialized class which inherits from Measurement.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.measurementType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.measurementType,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#phases]
=== `phases`
+++Indicates to which phases the measurement applies and avoids the need to use 'measurementType' to also encode phase information (which would explode the types). The phase information in Measurement, along with 'measurementType' and 'phases' uniquely defines a Measurement for a device, based on normal network phase. Their meaning will not change when the computed energizing phasing is changed due to jumpers or other reasons.
If the attribute is missing three phases (ABC) shall be assumed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]


|===

////
[.text-left]
--
<<slots_table.phases,&#10548;>>
--
////


//[discrete]
[#PinMeasurement]
=== `PinMeasurement`



[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.PinMeasurement`
| Cardinality
| 0..*
| Type
| xref::class/PinMeasurement.adoc[`PinMeasurement`]


|===

////
[.text-left]
--
<<slots_table.PinMeasurement,&#10548;>>
--
////


//[discrete]
[#PowerSystemResource]
=== `PowerSystemResource`
+++The power system resource that contains the measurement.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.PowerSystemResource`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResource,&#10548;>>
--
////


//[discrete]
[#Procedures]
=== `Procedures`
+++Measurements are specified in types of documents, such as procedures.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Procedures`
| Cardinality
| 0..*
| Type
| xref::class/Procedure.adoc[`Procedure`]


|===

////
[.text-left]
--
<<slots_table.Procedures,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionAdjustment]
=== `ProtectiveActionAdjustment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.ProtectiveActionAdjustment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionAdjustment,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Terminal]
=== `Terminal`
+++One or more measurements may be associated with a terminal in the network.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

////
[.text-left]
--
<<slots_table.Terminal,&#10548;>>
--
////


//[discrete]
[#unitMultiplier]
=== `unitMultiplier`
+++The unit multiplier of the measured quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.unitMultiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]


|===

////
[.text-left]
--
<<slots_table.unitMultiplier,&#10548;>>
--
////


//[discrete]
[#unitSymbol]
=== `unitSymbol`
+++The unit of measure of the measured quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Measurement.unitSymbol`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]


|===

////
[.text-left]
--
<<slots_table.unitSymbol,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ACDCTerminal.adoc[`ACDCTerminal`] | xref::class/ACDCTerminal.adoc#Measurements[`Measurements`]



| xref::class/Asset.adoc[`Asset`] | xref::class/Asset.adoc#Measurements[`Measurements`]



| xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`] | xref::class/CalculationMethodHierarchy.adoc#Measurement[`Measurement`]



| xref::class/Location.adoc[`Location`] | xref::class/Location.adoc#Measurements[`Measurements`]



| xref::class/MeasurementAction.adoc[`MeasurementAction`] | xref::class/MeasurementAction.adoc#Measurement[`Measurement`]



| xref::class/MeasurementCalculatorInput.adoc[`MeasurementCalculatorInput`] | xref::class/MeasurementCalculatorInput.adoc#Measurement[`Measurement`]



| xref::class/PinMeasurement.adoc[`PinMeasurement`] | xref::class/PinMeasurement.adoc#Measurement[`Measurement`]



| xref::class/PowerSystemResource.adoc[`PowerSystemResource`] | xref::class/PowerSystemResource.adoc#Measurements[`Measurements`]



| xref::class/Procedure.adoc[`Procedure`] | xref::class/Procedure.adoc#Measurements[`Measurements`]



| xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`] | xref::class/ProtectiveActionAdjustment.adoc#Measurement[`Measurement`]


|===

